2012-07-22  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_type_from_path): reduce
	scope of variable.

2012-07-22  Peter Bloomfield

	* libbalsa/libbalsa.c (libbalsa_guess_mail_spool),
	(asn1time_to_string), (x509_get_part): reduce scope of
	variables;
	(libbalsa_get_image_from_x_face_header): use sscanf field limit.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/siobuf.c (sio_set_tlsclient_ssl),
	(sio_set_tlsserver_ssl), (raw_read): reduce scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/pop3.c (parse_list_response): use sscanf field
	limits.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap_tst.c (get_user), (user_cb): reduce scope
	of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap_search.c (imap_search_key_new_string),
	(imap_search_exec_unlocked): reduce scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap-tls.c (imap_check_server_identity): reduce
	scope of variable.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap-handle.c (imap_handle_disconnect),
	(imap_cmd_step), (imap_get_sequence), (ir_get_append_copy_uids),
	(ir_status), (ir_quota), (ir_body_extension),
	(ir_handle_response): suppress unread-variable error, use sscanf
	field limits, reduce scope.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap-commands.c (imap_assure_needed_flags),
	(imap_mbox_sort_msgno_srv), (imap_mbox_sort_filter): reduce
	scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap-server.c (libbalsa_imap_server_get_handle,
	libbalsa_imap_server_get_handle_with_user): reduce scope of
	variables; suppress incorrect null pointer error.

2012-07-22  Peter Bloomfield

	* libbalsa/gmime-multipart-crypt.c (sign_prepare): reduce scope.

2012-07-22  Peter Bloomfield

	* libbalsa/gmime-gpgme-signature.h: suppress cppcheck syntax
	error.

2012-07-22  Peter Bloomfield

	* libbalsa/address-book-extern.c (parse_externq_file): use
	*scanf field limits to satisfy cppcheck.

2012-07-15  Peter Bloomfield
